syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option go_package = "/internal/server/proto";

service ValidatorService {
    rpc ListDuties(ListDutiesRequest) returns (ListDutiesResponse);
}

message ListDutiesRequest {
}

message ListDutiesResponse {
    repeated Duty duties = 1;
}

message Duty {
    // id is the identifier of the duty
    string id = 1;

    // pubKey is the public key of the validator that signs the job
    string pubKey = 2;

    // slot is the slot at which this job was created
    uint64 slot = 3;

    // active_time is the time when this duty is meant to be executed
    google.protobuf.Timestamp active_time = 4;
    
    // blockedBy is the list of duties for which this duty is blocked
    repeated string blockedBy = 5;

    uint64 epoch = 6;

    google.protobuf.Any input = 7;

    uint64 validatorIndex = 8;
    
    oneof job {
        BlockProposal BlockProposal = 20;
        Attestation Attestation = 21;
        AttestationAggregate AttestationAggregate = 22;
        SyncCommittee SyncCommittee = 23;
    }
}

message BlockProposal {
    string root = 2;
    string signature = 3;
}

message Attestation {
    string root = 2;

    Checkpoint source = 3;
    Checkpoint target = 4;

    message Checkpoint {
        string root = 1;
        uint64 epoch = 2;
    }
}

message AttestationAggregate {
    string selectionProof = 1;
}

message SyncCommittee {
}

message Validator {
    uint64 index = 1;
    string pubKey = 2;
    uint64 activationEpoch = 3;
    string privKey = 4; // provisional
}
